provarAnt/00D190000000ZY2EAM/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Exponent__c</fullName>
        <label>Exponent</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Exponent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>